--- a/app/toto.html
+++ b/app/toto.html
@@ -2,6 +2,7 @@
   <head>
     <title>hello toto</title>
     <link rel="stylesheet" href="https://raw.githubusercontent.com/hcrampont/my-app/master/app/test.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/hcrampont/my-app/master/app/test2.css">
     <style>
       body {background-color: powderblue;}
     </style>
