--- a/app/titi.html
+++ b/app/titi.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>hello toto</title>
+    <title>hello titi</title>
     <link rel="stylesheet" href="https://raw.githubusercontent.com/hcrampont/my-app/master/app/test.css">
     <link rel="stylesheet" href="https://raw.githubusercontent.com/hcrampont/my-app/master/app/test2.css">
     <script type="text/javascript" src="https://raw.githubusercontent.com/hcrampont/my-app/master/app/toto.js"></script>
@@ -98,7 +98,7 @@
           })
       }
     </script>
-    <h1>hello toto</h1>
-    <p>hello toto</p>
+    <h1>hello titi</h1>
+    <p>hello titi</p>
   </body>
 </html>
